<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="action_settings">Settings</string>

    <!--Strings for main page-->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome!</string>
    <string name="select_rock_paper_scissor_to_play">Select a rock, paper or scissor to play the game.</string>
    <string name="rockbtn" />
    <string name="paperbtn" />
    <string name="sciccorsbtn" />
    <string name="vs">vs</string>
    <string name="computer">Computer</string>
    <string name="todo">TODO</string>
    <string name="you">You</string>

    <!--Strings for the score page-->
    <string name="the_computer_wins">The Computer Wins</string>
    <string name="image_of_the_computers_turn" />
    <string name="image_of_the_players_turn" />
    <string name="date_and_time">Date and time</string>
    <string name="action_gotogamehistory">action_goToGameHistory</string>
    <string name="gamehistory">gameHistory</string>
    <string name="Menu" />

    <!--Strings for the Main Activity-->
    <string name="Draw">Draw!</string>
    <string name="youLose">You lose!</string>
    <string name="youWin">You win!</string>
</resources>
